ECA-9834 Added field constraints for ACME alias.

--- a/modules/admin-gui/resources/languages/languagefile.fr.properties
+++ b/modules/admin-gui/resources/languages/languagefile.fr.properties
@@ -3263,6 +3263,8 @@ HS512 = HS512
 
 ACME_GLOBAL_CONFIGS       = Configuration ACME globale
 
+ONLYLEGALCHARSMAX250_INACMEALIAS = L'alias ACME doit être composé de 1 à 250 caractères alphanumériques non vides sensibles à la casse, y compris moins '-' et trait de soulignement '_'. 
+
 ONLYNUMBERS_INNONCEVALIDITY = Seulement les chiffres sont autorisés dans le champ “Nombre de validité du champ Replay-Nonce”.
 
 INVALID_DNS_PORT = Numéro de port DNS invalide. Veuillez saisir un nombre entre 53 et 65535.
