ECA-10184 Add Managed Identity option to UI and AzureCryptoToken.
Replace the single boolean indicator that formerly specified using a key
binding with an enumeration that allows multiple authentication types.

--- a/modules/admin-gui/resources/languages/languagefile.en.properties
+++ b/modules/admin-gui/resources/languages/languagefile.en.properties
@@ -633,6 +633,11 @@ CRYPTOTOKEN_NEED_EXISTING_OR_GEN = You need to select a Crypto Token that exists
 
 CRYPTOTOKEN_COULD_NOT_BE_DELETED_BECAUSE_REFERENCE_IN_ACME_ALIAS = The Crypto Token could not be deleted because it is referenced by ACME configuration(s): {0}.
 
+AZUREAUTHENTICATIONTYPE.APP_ID_AND_SECRET = Application ID and Secret
+AZUREAUTHENTICATIONTYPE.KEY_BINDING = Private Key from Internal Key Binding
+AZUREAUTHENTICATIONTYPE.MANAGED_IDENTITY = Azure Managed Identity
+
+
 ### Internal Key Bindings
 
 INTERNALKEYBINDING = Internal Key Binding
