--- a/modules/ra-gui/resources/WEB-INF/classes/Messages_en.properties
+++ b/modules/ra-gui/resources/WEB-INF/classes/Messages_en.properties
@@ -519,6 +519,7 @@ delete_role_page_error_generic = The role member could not be removed.
 
 page_initialization_fail = The page could not be initialized: '{0}'
 
+enroll_ca_not_found = CA could not be found: {0}.
 enroll_render_non_modifiable_button_show = Show details
 enroll_render_non_modifiable_button_hide = Hide details
 enroll_select_eep_nochoice = Select...
@@ -566,6 +567,7 @@ enroll_select_token_type = Select Token Type
 enroll_provide_request_info = Provide request info
 enroll_end_entity_has_been_successfully_added = End Entity with username '{0}' has been added successfully
 enroll_end_entity_could_not_be_added = End Entity with username '{0}' could not be added: {1}.
+enroll_end_entity_not_found = End Entity could not be found: {0}.
 enroll_keystore_could_not_be_generated = Keystore could not be generated for username '{0}': {1}.
 enroll_certificate_could_not_be_generated = Certificate could not be generated for end entity with username '{0}': {1}.
 enroll_token_has_been_successfully_generated = '{0}' token has been generated for the end entity with username '{1}'
