ECA-9752: add in-line help texts about available CAs in EE profiles and access rules

--- a/modules/admin-gui/resources/languages/languagefile.en.properties
+++ b/modules/admin-gui/resources/languages/languagefile.en.properties
@@ -1588,6 +1588,8 @@ EDITROLEMEMBERS           = Edit Members
 
 ENDENTITYPROFILEACCESSR   = End Entity Profile Access Rules
 
+ENDENTITYPROFILEACCESSR_HELP = Available CAs in end entity profiles must also be authorized CAs in a role. 
+
 ENDENTITYPROFILES         = End Entity Profiles
 
 ENDENTITYPROFILESAVED     = End Entity Profile '{0}' saved.
@@ -1808,6 +1810,8 @@ ARLATTRIBUTE              = ARL Attribute
 AVAILABLEBITLENGTHS       = Available Bit Lengths
 
 AVAILABLECAS              = Available CAs
+
+AVAILABLECAS_EEPROFILE_HELP = Modifying available CAs may affect roles access to this profile
 
 AVAILABLEECDSACURVES      = Available ECDSA curves
 
