ECA-10220: give error on invalid OID, unless it's None.

--- a/modules/admin-gui/resources/languages/languagefile.en.properties
+++ b/modules/admin-gui/resources/languages/languagefile.en.properties
@@ -2235,7 +2235,7 @@ INCORRECTMAXLESSTHANMIN   = Maximum number of SCTs cannot be less than minimum n
 
 INVALIDPORTNUMBER         = Invalid port number
 
-INVALIDSUBJECTDN          = Creation of CA failed, invalid Subject DN or Subject Alternative Name
+INVALIDSUBJECTDN          = Creation of CA failed, invalid Subject DN, Subject Alternative Name or Policy OID
 
 INVALIDSUBJECTALT         = Creation of CA failed, invalid Subject Alternative Name (example of correct SAN: DNSName=www.example.com)
 
